--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
         <div class="menu_top_text">
             <ul class="list_menu_top">
                 <li class="item_menu_top">
-                    <a href="" class="link_menu_top"> Toàn cảnh <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="link_menu_top"> Toàn cảnh <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="list_sub_top">
                         <li class="item_sub_top" id="scene_1_flycam1">
-                            <a class="link_sub">Toàn cảnh 01</a>
+                            <a class="link_sub">Toàn cảnh khu sản xuất</a>
                         </li>
                     </ul>
                 </li>
                 <li class="item_menu_top">
-                    <a href="" class="link_menu_top"> Khu nguyên liệu <i class="fa-solid fa-caret-down"></i></a>
+                    <a  class="link_menu_top"> Khu nguyên liệu <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="list_sub_top">
                         <li class="item_sub_top" id="scene_15_nguyenlieua1">
                             <a  class="link_sub">Nguyên Liệu A1</a>
@@ -87,7 +87,7 @@
                     </ul>
                 </li>
                 <li class="item_menu_top">
-                    <a href="" class="link_menu_top"> Khu trưng bày <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="link_menu_top"> Khu trưng bày <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="list_sub_top">
                         <li class="item_sub_top" id="scene_5_khusxcayduoclieu">
                             <a  class="link_sub">Nhà trưng bày</a>
@@ -111,7 +111,7 @@
                     </ul>
                 </li>
                 <li class="item_menu_top">
-                    <a href="" class="link_menu_top"> Khu sản xuất <i class="fa-solid fa-caret-down"></i></a>
+                    <a  class="link_menu_top"> Khu sản xuất <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="list_sub_top">
                         <li class="item_sub_top" id="scene_10_kho">
                             <a  class="link_sub">Khu xưởng sấy</a>
@@ -236,7 +236,7 @@
 			</li>
 		</ul>
 		<ul class="name_scene">
-			<h2 class="title_name_scene">Toàn cảnh 01</h3>
+			<h2 class="title_name_scene" id="name_scene">Toàn cảnh khu sản xuất</h3>
 			<span class="title_tour">Trà Hoa Vàng</span>
 		</ul>
 		
@@ -572,23 +572,23 @@
 			<div class="container">
 				<div class="form_contact">
 					<div class="contact">
-						<h3 class="title_contact">Contact Us</h3>
+						<h3 class="title_contact">Liên Hệ</h3>
 						<form id="contact-form" >   
 							<input type="hidden" name="_token" value="2d7EP09QskNLTOighldVx0TZxQ3ae1iotrMIeMfq">       
 						<div class="form-group ">
-							<input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
+							<input type="text" name="name" id="name" class="form-control" placeholder="Tên">
 											  </div>   
 						<div class="form-group ">
-							<input type="text" name="email" id="phone" class="form-control" placeholder="Your Email Address">
+							<input type="text" name="email" id="phone" class="form-control" placeholder="Địa chỉ email">
 											</div>   
 						<div class="form-group ">
-							<input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone Number">
+							<input type="text" name="phone" id="phone" class="form-control" placeholder="Số điện thoại">
 											  </div>                        
 						<div class="form-group ">
-							<textarea class="form-control" name="message" id="message" placeholder="Type your mesage here.." rows="3" cols="4"></textarea>
+							<textarea class="form-control" name="message" id="message" placeholder="Tin nhắn..." rows="3" cols="4"></textarea>
 											   </div>  
 						<div style="text-align:center">
-							<button type="submit" class=" btn-sub text-uppercase">Submit</button>      
+							<button type="submit" class=" btn-sub text-uppercase">Gửi</button>      
 						</div> 
 										  
 					</form>
