commit delete text Thong Tin

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <a class="link_menusub_top_mobile">Khu nguyên liệu A</a>
                         </li>
                         <li class="item_menu_top_mobile" id="scene_13_khunguyenlieub1">
-                            <a class="link_menusub_top_mobile">Vườn  nguyên liệu B</a>
+                            <a class="link_menusub_top_mobile">Khu nguyên liệu B</a>
                         </li>
                         
                     </ul>
