commit js close contact

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 										  
 					</form>
 					</div>
-					<span class="button_close" id="close_general" onclick="close_info()">
+					<span class="button_close" id="close_general" onclick="close_contact()">
 						<i class="fas fa-times"></i>
 					</span>
 				</div>
